assets/css/src/base/layout.css
body {
	background: var(--mdc-theme-background, #fff);
	color: var(--mdc-theme-on-background, #000);
}

.site-content {
	padding-top: var(--admin-bar-offset, 3.5rem);
}

.-has-tab-bar + .site-content {
	padding-top: 0;
}

.admin-bar {
	--admin-bar-offset: 4rem;
}

.content-area {
	padding-left: 1rem;
	padding-right: 1rem;
	margin-left: auto;
	margin-right: auto;
	margin-top: 5rem;
	max-width: var(--mdc-theme-max-content-width);
}

.page-header {
	padding-left: 1.5rem;
	padding-right: 1.5rem;
}

.entry-title {
	margin: 1rem auto;
}

.entry-content {
	margin-top: 2rem;

	> * {
		margin-bottom: 1.25rem;
	}

	& h1,
	& h2,
	& h3 {

		@media (--medium-viewport) {
			margin: 3rem auto 2rem;
		}
	}
}

.entry-content .alignwide {

	@media (--medium-viewport) {
		margin-left: calc(25% - 25vw);
		margin-right: calc(25% - 25vw);
	}

	&.wp-block-image {
		max-width: none;
	}

	&.wp-block-cover {

		@media (--medium-viewport) {
			width: auto;
		}
	}
}

.entry-content .alignfull {

	@media (--medium-viewport) {
		margin-left: calc(-100vw / 2 + 100% / 2);
		margin-right: calc(-100vw / 2 + 100% / 2);
		max-width: 100vw;
	}

	&.wp-block-cover {

		@media (--medium-viewport) {
			width: auto;
		}
	}
}

blockquote {
	border-color: var(--mdc-theme-primary, #6200ee);
}

